# packet-browser

./: .gitignore  AUDIT_REPORT.md  Makefile  README.md  demo-vara.sh  demo.sh  docker-compose.yml  flake.nix
.claude/: settings.json
.github/workflows/: build.yml
.opencode/plan/: 2026-06-26-client-server-rewrite.md  2026-06-26-phase5-client-web-proxy.md  2026-06-26-phase7-completion.md  2026-06-26-phase7-integration-tests.md
.superpowers/sdd/: post-merge-fixes.md
client/: Cargo.toml  config.example.ini
client/src/: agwpe.rs  cache.rs  config.rs  lib.rs  main.rs  proxy.rs  rewrite.rs  state.rs  ui.rs
client/src/transport/: agwpe.rs  manager.rs  mod.rs  session.rs
client/src/transport/vara/: codec.rs  mod.rs  transport.rs
client/tests/: api_connect_transport_dispatch.rs  session_reconnect.rs  vara_mock_modem.rs
docs/superpowers/plans/: 2026-07-13-local-cache.md  2026-07-20-graceful-reconnect.md  2026-07-22-vara-transport.md
docs/superpowers/specs/: 2026-07-13-local-cache-design.md  2026-07-20-graceful-reconnect-design.md  2026-07-22-vara-transport-design.md
e2e/: conftest.py  helpers.py  requirements-test.txt  telnet_bridge.py  test_agwpe_direct.py  test_audio.py  test_e2e.py
packaging/arch/: PKGBUILD
packaging/debian/: control  rules
packaging/gentoo/: packet-browser-client-0.2.0.ebuild
packaging/nix/: default.nix
packaging/rpm/: packet-browser-client.spec
packaging/seccomp/: firefox.json
packaging/systemd/: packet-browser-client.service
scripts/: pre-push
server/: Cargo.toml
server/src/: blocklist.rs  browser.rs  config.rs  filter.rs  lib.rs  logger.rs  main.rs  origin_cc.rs  proxy.rs  session.rs
server/tests/: config_test.rs  filter_test.rs  logger_test.rs  session_test.rs
shared/: Cargo.toml
shared/src/: compress.rs  lib.rs  protocol.rs
