[package]
name = "packet-browser-server"
version = "0.1.0"
edition = "2021"
description = "Packet radio web browser server - fetches and sanitizes web pages"
license = "GPL-3.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
headless_chrome = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2"
reqwest = { version = "0.11", features = ["blocking"] }
openssl = { version = "0.10", features = ["vendored"] }
packet-browser-shared = { path = "../shared" }

[dev-dependencies]
tempfile = "3"
