[package]
name = "packet-browser-server"
version = "0.4.0"
edition = "2021"
description = "Packet radio web browser server - fetches and sanitizes web pages"
license = "GPL-3.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
fantoccini = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2"
url = "2"
reqwest = { version = "0.12", features = ["blocking"] }
httpdate = "1"
openssl = { version = "0.10", features = ["vendored"] }
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
packet-browser-shared = { path = "../shared" }
tempfile = "3"

[dev-dependencies]
tempfile = "3"
